Bug 1457107 - Don't throttle visibility change animations if the animation element isn't on out-of-view element. r=birtles

In bug 1237454, we introduced a new change hint that is produced when
visibility property is changed from 'visible' to 'hidden' or from 'hidden'
to 'visible'.  Animations producing this new change hint can be throttled
if the animation element is out-of-view, but can not be throttled in the case
where the element is in-view. In the bug, a test case for a visibility change
animation on out-of-view element was added, but no test for in-view case was
added.

MozReview-Commit-ID: BhiRm13rfRr

--HG--
extra : rebase_source : 264954ff349d5a9c5a00b940b2eaf2045f0952ae